backlight: added LED channel map
Adds an LED channel map devicetree binding and kconfig
to permit the use of LED driver IC for backlight.

Signed-off-by: Kelly Helmut Lord <helmut@helmutlord.com>

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -302,6 +302,9 @@ config ZMK_BACKLIGHT_AUTO_OFF_IDLE
 config ZMK_BACKLIGHT_AUTO_OFF_USB
     bool "Turn off backlight when USB is disconnected"
 
+config ZMK_BACKLIGHT_MAP
+    bool "Allow backlight to be mapped to LED channels"
+
 #ZMK_BACKLIGHT
 endif
 
