drivers: cw2015 fuel gauge
Added driver for CW2015 I2C fuel gauge IC

Signed-off-by: Kelly Helmut Lord <helmut@helmutlord.com>

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -343,6 +343,10 @@ config ZMK_EXT_POWER
     bool "Enable support to control external power output"
     default y
 
+config ZMK_BATTERY_INDICATOR
+    bool "Enable battery indicator"
+    default n
+
 #Power Management
 endmenu
 
